# Pylenium-pytest-tutorial

./: .gitignore  README.md  conftest.py  pylenium.json  pyproject.toml  requirements.txt
ci/: run_lambdatest.sh
tests/: requirements.txt  test_cross_browser.py  test_example.py  test_one_test_against_many_browsers.py  test_shared_driver.py  test_todo.py
